fix hero image scaling and hide brand name on small screens

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,8 +1,7 @@
 @import "../../shared/global-variables.scss";
 
 .hero {
-    max-width: 100%;
-    height: 500px;
+    max-height: 500px;
     margin-left: auto;
     margin-right: auto;
     display: block;
